# lib/api-spec/openapi.yaml
@@ -249,6 +249,8 @@ components:
           type: string
         tax_regime:
           type: string
+        has_startup_label:
+          type: boolean
         created_at:
           type: string
       required:
@@ -267,6 +269,8 @@ components:
           type: string
         tax_regime:
           type: string
+        has_startup_label:
+          type: boolean
       required:
         - company_name
 
